# Repograph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  repograph_export.json  run.sh  setup.sh
.github/workflows/: ci.yml
docs/: ACCURACY.md  ACCURACY_CONTRACT.md  AGENT_USAGE.md  CLI_REFERENCE.md  CONFIG_HYGIENE.md  PIPELINE.md  README.md  SCHEMA_CHANGES.md  SETUP.md  SURFACES.md
docs/architecture/: PLUGIN_PHASES_AND_HOOKS.md
docs/archive/: ACCURACY_CONTRACT.md
docs/ops/: BACKUP_RESTORE.md  CORRUPTION_RECOVERY.md  MULTI_USER.md  PERFORMANCE_TUNING.md
docs/plugins/: AUTHORING.md  DISCOVERY.md
docs/refactor/: INDEX.md  INTEGRATION_SURFACE.md  PHASE_16_CLOSURE_PASS.md  PHASE_18_CLEANUP_PASS.md
repograph/: __main__.py  api.py  cli.py  config.py  config_schema.py  entry.py  exceptions.py
repograph/core/: confidence.py  models.py
repograph/diagnostics/: __init__.py  env_doctor.py  impact_warnings.py
repograph/docs/: mirror.py  narrative.py  staleness.py  structured.py
repograph/graph_store/: __init__.py  kuzu_loader.py  schema.py  store.py  store_base.py  store_queries_analytics.py  store_queries_calls.py  store_queries_entrypoints.py  store_queries_nodes.py  store_queries_readers.py  store_queries_search.py  store_queries_structure.py  store_utils.py  store_writes_admin.py  store_writes_rel.py  store_writes_upserts.py
repograph/interactive/: __init__.py  bootstrap.py  cli_browser.py  cli_catalog.py  graph_queries.py  handlers_a.py  handlers_b.py  logs_handler.py  main.py  ui.py  watch.py
repograph/mcp/: nl_query.py  server.py
repograph/observability/: __init__.py  _config.py  _context.py  _logger.py  _mixin.py  _policy.py  _sinks.py  _spans.py
repograph/parsing/: README.md  __init__.py  base.py  cross_lang_resolver.py  html_scanner.py  symbol_table.py
repograph/pipeline/: README.md  __init__.py  health.py  incremental.py  runner.py  sync_state.py
scripts/: check_plugin_coverage.py  repograph_setup.py
tests/: README.md  conftest.py  test_dead_code_classifier.py  test_framework_hooks_emit.py  test_inheritance_rollup.py  test_pathway_bfs.py  test_scorer.py
(+463 files in other folders)
